<resources>
    <string name="app_name">BizzConnect</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_name">Your Name*</string>
    <string name="prompt_username">Username*</string>
    <string name="prompt_number">Phone Number (Optional)</string>
    <string name="prompt_password">Password*</string>
    <string name="display_username">Username:</string>
    <string name="display_name">Name:</string>
    <string name="display_email">Email:</string>
    <string name="display_number">Phone Number: </string>
    <string name="display_name1">Eddie Salvatierra</string>
    <string name="display_email1">edsalva123@gmail.com</string>
    <string name="display_number1">443-619-9003</string>
    <string name="display_company1">RPM Tech</string>
    <string name="display_bcontact">Add Contact</string>
    <string name="display_blink">Linkedin</string>
    <string name="action_new_user">Create New Account</string>
    <string name="action_register">Register</string>
    <string name="action_viewcards">View Saved Business Cards</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
